--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,13 @@
 extends ./layout.jade
+
+block ptitle
+	title Iniciar Sesión
+
+block title
+	h2 Iniciar Sesión
+
 block contenido
 	div(class="col-md-6 remove-float center-block big-top-space")
-		h1 Iniciar sesión
 		form(action="/sessions", method="POST")
 			div(class="form-group")
 				label(for="email") Email
