reestrucurtacion de archivos 1

--- a/views/app/imagenes/list.jade
+++ b/views/app/imagenes/list.jade
@@ -19,7 +19,7 @@ block contenido
 									td
 										ul
 											li
-												a(href="/app/imagenes/#{img._id}", class="right-space") editar
+												a(href="/app/images/#{img._id}", class="right-space") editar
 											li
-												form(action="/app/imagenes/#{img._id}?_method=DELETE", class="link", method="POST")
+												form(action="/app/images/#{img._id}?_method=DELETE", class="link", method="POST")
 													input(type="submit", value="eliminar")
