--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,7 @@ extends ./layout.jade
 block contenido
 	div(class="col-md-8 remove-float center-block text-center big-top-space")
 		h1 Bienvenido a la app de fotos
-		a(href="/login" class="right-space") Iniciar Sesion
-		a(href="/signup") Registro
+		.container
+			img(src="/news.png" alt="news-test-node-jade" style="width:50%")
+		a(href="/auth/login" class="right-space") Iniciar Sesion
+		a(href="/auth/signup") Registro
