--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,8 @@ html(lang="es")
 		include ./static/navbar
 		div(class="container")
 			block title
-			hr
+			if ( user )
+				hr
 			p
 				block contenido
 	include ./static/footer
