--- a/views/signup.jade
+++ b/views/signup.jade
@@ -8,7 +8,7 @@ block title
 	
 block contenido
 	div(class="col-md-6 remove-float center-block big-top-space")
-		form(action="/users", method="POST")
+		form(action="/signup", method="POST")
 			div(class="form-group")
 				label(for="email") Email
 				input(class="form-control" type="text" name="email" placeholder="Ingrese su email" id="email")
