--- a/views/static/navbar.jade
+++ b/views/static/navbar.jade
@@ -7,6 +7,6 @@ nav( class="navbar navbar-expand-lg navbar-dark bg-dark" )
 		li(class="nav-item")
 			a( class="nav-link" href="/app") Inicio
 		li(class="nav-item")
-			a( class="nav-link" href="/app/imagenes") Mis Imagenes
+			a( class="nav-link" href="/app/images") Mis Imagenes
 		li(class="nav-item")
-			a( class="nav-link" href="/app/imagenes/new") Nueva Imagen
+			a( class="nav-link" href="/app/images/new") Nueva Imagen
