--- a/views/app/imagenes/new.jade
+++ b/views/app/imagenes/new.jade
@@ -6,7 +6,7 @@ block title
 block contenido
 	div(class="card")
 		div(class="card-body")
-			form(action="/app/imagenes/new", method="POST" enctype="multipart/form-data")
+			form(action="/app/images/new", method="POST" enctype="multipart/form-data")
 				div(class="row form-group")
 					div(class="col-md-3")
 						label(for="title") Titulo
