--- a/views/app/imagenes/show.jade
+++ b/views/app/imagenes/show.jade
@@ -2,6 +2,6 @@ extends ../../layout.jade
 block contenido
 	div(class="img-container center-block")
 		h1= image.title
-		img( src="/static/img/#{image._id}.#{image.extension}" class="main-img")
+		img( src="/img/#{image._id}.#{image.extension}" class="img-thumbnail main-img")
 		if ( typeof image.owner != "undefined")
 			p Por #{ image.owner.email }
