--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends ./layout.jade
 block contenido
 	div(class="col-md-8 remove-float center-block text-center big-top-space")
-		h1 Bienvenido a la app de fotos
+		h1 My notice app
 		.container
 			img(src="/news.png" alt="news-test-node-jade" style="width:50%")
 		a(href="/auth/login" class="right-space") Iniciar Sesion
