--- a/views/app/imagenes/edit.jade
+++ b/views/app/imagenes/edit.jade
@@ -2,7 +2,7 @@ extends ../../layout.jade
 block contenido
 	div(class="col-md-6 remove-float center-block big-top-space")
 		h1 Editar imagen
-		form(action="/app/imagenes/#{image.id}?_method=PUT", method="POST")
+		form(action="/app/images/#{image.id}?_method=PUT", method="POST")
 			div(class="form-group")
 				label(for="title") Titulo
 				input(class="form-control" type="text" name="title" placeholder="Titulo de la imagen" id="title" value="#{ image.title }")
